Fix assistant dark mode

--- a/app/colors.scss
+++ b/app/colors.scss
@@ -5,3 +5,4 @@ $low-contrast-light: hsl(216, 5%, 74%);
 $background-dark: hsl(216, 28%, 7%);
 $high-contrast-dark: whitesmoke;
 $low-contrast-dark: hsl(216, 3%, 30%);
+$medium-contrast-dark: hsl(216, 3%, 50%);
