--- a/app/globals.scss
+++ b/app/globals.scss
@@ -20,6 +20,8 @@ body {
   --background: #{colors.$background-dark};
   --high-contrast: #{colors.$high-contrast-dark};
   --low-contrast: #{colors.$low-contrast-dark};
+  --surface-1-background: #{colors.$low-contrast-dark};
+  --surface-1-low-contrast: #{colors.$medium-contrast-dark};
 }
 
 @media (prefers-color-scheme: light) {
@@ -27,6 +29,8 @@ body {
     --background: #{colors.$background-light};
     --high-contrast: #{colors.$high-contrast-light};
     --low-contrast: #{colors.$low-contrast-light};
+    --surface-1-background: #{colors.$background-light};
+    --surface-1-low-contrast: #{colors.$low-contrast-light};
   }
 }
 
