--- a/components/Assistant.module.scss
+++ b/components/Assistant.module.scss
@@ -12,6 +12,7 @@
   gap: 0.5rem;
   font-size: 1.25rem;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  background-color: var(--surface-1-background);
   border-radius: 0.5rem;
   height: 100%;
 }
