--- a/components/AssistantInput.module.scss
+++ b/components/AssistantInput.module.scss
@@ -5,7 +5,7 @@
 .input {
   border-radius: 0.5rem;
   background-color: inherit;
-  border: 1px solid var(--low-contrast);
+  border: 1px solid var(--surface-1-low-contrast);
   padding: 0.5rem 0.75rem;
   outline: none;
   font-size: inherit;
